objects/Logs__c.object
<CustomObject>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <label>Error Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PE_Reply_Id__c</fullName>
        <label>PE Reply Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Rec_Id__c</fullName>
        <label>SF Rec Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_or_Class_Name__c</fullName>
        <label>Trigger or Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead enrichment call failures</fullName>
                </value>
                <value>
                    <fullName>Lead routing failure</fullName>
                </value>
                <value>
                    <fullName>Lead insertion failures</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful log-in attempts from SSO</fullName>
                </value>
                <value>
                    <fullName>Lead update failures</fullName>
                </value>
                <value>
                    <fullName>Opportunity update failures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Logs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Line_Number__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SF_Rec_Id__c</columns>
        <columns>Trigger_or_Class_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>